--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "secondexpo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "entry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.1",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
